--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -13,17 +13,19 @@
         <div class="element"></div>
         <div class="target"></div>
 
-        <script src="../../tether.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
         <script>
-            new Tether({
-                element: '.element',
-                target: '.target',
-                attachment: 'top left',
-                targetAttachment: 'top right',
-                constraints: [{
-                    to: 'window',
-                    attachment: 'together'
-                }]
+            require(['../../tether'], function (Tether) {
+                new Tether({
+                    element: '.element',
+                    target: '.target',
+                    attachment: 'top left',
+                    targetAttachment: 'top right',
+                    constraints: [{
+                        to: 'window',
+                        attachment: 'together'
+                    }]
+                });
             });
         </script>
     </body>
